tests/toylang/pos/000055_cdrc2.toylang
program a = { if(a) then a = a else sleep; } .
