tests/toylang/neg/000397_mutation.toylang
program a = { a = (var a : bool a); } .
